# m2-batch

./: CMakeLists.txt  README.md  config.h  file.h  filepath.cpp  filepath.h  m2.cpp  m2.h  main.cpp  script.h  skin.cpp  skin.h
scripts/: CameraFinder.h  DemoScript.h  YourScript.h
